<resources>
    <string name="app_name">App</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="store_detail_title">Store %1$s Details</string>
    <string name="user_detail_title">User %1$s Details</string>
    <string name="product_detail_title">Product %1$s Details</string>
    <string name="assigned_users_list_title">Assigned Users - Store %1$s</string>
    <string name="assigned_products_list_title">Assigned Products - Store %1$s</string>
    <string name="delivery_detail_title">Delivery %1$s Details</string>
    <string name="cash_report_title">Store %1$s - $A%2$.2f</string>
    <string name="selected_item">Selected position:</string>
    <string name="find_product">Find Product</string>
    <string name="find_user">Find User</string>
    <string name="create_new_product">Create New Product</string>
    <string name="create_new_store">Create New Store</string>
    <string name="create_new_user">Create New User</string>
    <string name="microphone_icon">microphone icon</string>
    <string name="enter_product_name">enter product name</string>
    <string name="audio_input">Audio Input</string>
    <string name="product_management">Product Management</string>
    <string name="log_out">Log Out</string>
    <string name="home_administrator">Home - Administrator</string>
    <string name="view_inventory">Inventory Count</string>
    <string name="delivery_list">Delivery List</string>
    <string name="discard_items">Discard Items</string>
    <string name="cash_report">Cash Report</string>
    <string name="user_management">User Management</string>
    <string name="store_management">Store Management</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="conversion">Conversion e.g., 1:6 or 25:16</string>
    <string name="big_unit_name">Big Unit Name</string>
    <string name="small_unit_name">Small Unit Name</string>
    <string name="product_name">Product Name</string>
    <string name="employee">Employee</string>
    <string name="administrator">Administrator</string>
    <string name="delivery_user">Delivery User</string>

    <string name="total_product_quantity">Quantity: %1$d</string>
    <string name="deposited_amount">Deposit: A$%1$.2f</string>
    <string name="withdrawn_amount">Withdraw: A$%1$.2f</string>
    <string name="name_price">%1$d | %2$s    A$%3$.2f</string>
    <string name="product_id_name">%1$d | %2$s</string>
    <string name="first_last_names">%1$d | %2$s    %3$s</string>
    <string name="price_number">A$%1$.2f</string>
    <string name="comma">%1$s, %2$s</string>
    <string name="store_business">Store %1$d</string>
    <string name="select_store">Select Store</string>
    <string name="expected_earned">Expected: A$%1$.2f / Actual Count: A$%2$.2f</string>
    <string name="difference">Difference: A$%1$.2f</string>
    <string name="home_employee">Home - Employee</string>
    <string name="home_delivery_user">Home - Delivery User</string>
    <string name="deposit">Deposit</string>
    <string name="quantity">Quantity</string>
    <string name="add">add</string>
    <string name="available_deliveries">Available Deliveries</string>
    <string name="download_the_report">Download The Report</string>

    <string-array name="Positions">
        <item>Employee</item>
        <item>Administrator</item>
        <item>Delivery User</item>
    </string-array>
</resources>