<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".employee.employee_home.EmployeeHomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/home_employee"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/microphone_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/microphone_icon"
            android:src="@drawable/ic_baseline_mic_24"
            android:padding="8dp"
            android:tint="#FFFFFF"
            android:background="@drawable/round_square_corner"
            app:layout_constraintBottom_toBottomOf="@+id/inventory_count_button"
            app:layout_constraintStart_toEndOf="@+id/inventory_count_button"
            app:layout_constraintTop_toTopOf="@+id/inventory_count_button" />

        <Button
            android:id="@+id/inventory_count_button"
            android:layout_marginTop="4dp"
            android:text="@string/view_inventory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_title"
            style="@style/BlueButtonStyle"/>

        <Button
            android:id="@+id/view_delivery_list_button"
            android:layout_marginTop="4dp"
            android:text="@string/delivery_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inventory_count_button"
            style="@style/BlueButtonStyle"/>

        <Button
            android:id="@+id/discard_items_button"
            android:layout_marginTop="4dp"
            android:text="@string/discard_items"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_delivery_list_button"
            style="@style/BlueButtonStyle"/>

        <Button
            android:id="@+id/cash_report_button"
            android:layout_marginTop="4dp"
            android:text="@string/cash_report"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discard_items_button"
            style="@style/BlueButtonStyle"/>

        <Button
            android:id="@+id/log_out_button"
            android:layout_marginTop="4dp"
            android:text="@string/log_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cash_report_button"
            style="@style/BlueButtonStyle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>